# Omero_GU

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  OMERO_GU.yml  Omero_flask_SQL.py  README.md  conf.py  config.py  connection_blueprint.py  dashboard.py  database.py  file_data.py  file_importer.py  image_funcs.py  local-uwsgi.ini  logback.xml  logger.py  omero_connection.py  omero_frontend.py  omero_funcs.py  omero_imports.db  pyproject.toml  pyrightconfig.json  requirements-pyright.txt  requirements.txt  ruff.toml  start_uwsgi.sh  test_requirements.txt  tox.ini  uwsgi.ini  wsgi.py
.github/workflow/: run_tests.yml
.github/workflows/: build_docker.yaml  run_pyright.yml  run_ruff.yml  tox_test.yml
buildfiles/: build_conf_dev.yaml  build_conf_test.yaml  cron_imports_rollup.yaml  deploy_conf_test.yaml  secret_db_credentials.yaml
dev_plan/: czi_pyramidizer_deployment_plan.md
src/: wsgi.py
src/common/: conf.py  czi_pyramidizer.py  file_data.py  logger.py  (+4 more)
static/: bulma.min.css  help.md  style.css  upload_style.css
sys_config_files/: environment.yml  nginx_dev.env  nginx_omero_app.template  nginx_prod.env  omero_app_uwsgi.service  omero_app_uwsgi.template  remove_server.sh  server_common.sh  setup_server.sh
templates/: base.html  dashboard.html  enter_token.html  error_page.html  help_page.html  index.html  logged_out.html  navbar.html  upload.html
tests/: test_czi_pyramidizer.py  test_database_handler.py  test_file_importer.py  test_full_upload_manual.py  test_image_funcs.py  test_image_funcs_pyramidizer_flow.py  test_temp_file_handler.py
(+28 files in other folders)
