[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "omerofrontend"
dynamic = ["version"]
description = "Flask frontend for uploading to omero. CCI GU"
authors = [
    { name="Anders Folkesson", email="anders.folkesson@gu.se" },
    { name="Simon Leclerc", email="simon.leclerc@gu.se" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # List your runtime dependencies here, e.g.:
    # "requests>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Optional: config for setuptools-scm if you use git tags for versioning

[project.optional-dependencies]
test = [
    "pytest",
    "tox",
    "ruff",
]



[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true
log_cli_level = "DEBUG"
log_file = "pytest.log"
markers = [
    "manual: mark a test as manual (deselect with '-m \"not manual\"')",
]